ore processor from GTO